# SOuL

./: .env.development.template  .env.example  .env.production.template  .gitignore  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  README.md  app.yaml  generate-secrets.js  impact-map.css  impact-map.js  index.html  nginx.conf  package-lock.json  package.json  script.js  styles.css
.do/: app.yaml
.github/workflows/: deploy.yml  main.yml  sentry.yml
app/: .env.production  .env.template  .sentryclirc  .vercelignore  babel.config.js  config-overrides.js  jest.config.js  package-lock.json  package.json  sentry.properties  vercel.domains.json  vercel.env  vercel.json  vercel.security.json
app/coverage/junit/: junit.xml
app/public/: index.html
app/scripts/: optimize.js  setup-all.js  setup-domain.js
app/soulmate/: package-lock.json  package.json
app/soulmate/client/: package-lock.json  (+1 more)
app/src/: App.css  App.js  index.css  index.js  server.js  setupTests.js
contracts/soul-token/: token.rs
docs/technical/: ARCHITECTURE.md
docs/tokenomics/: TOKENOMICS.md
program/: Cargo.toml
program/src/: error.rs  instruction.rs  main.rs  processor.rs  state.rs
program/src/game/: instruction.rs  state.rs
program/src/impact/: instruction.rs  processor.rs  state.rs
program/src/lst/: instruction.rs  processor.rs  state.rs
program/src/vesting/: instruction.rs  mod.rs  processor.rs  state.rs
program/tests/: token_tests.rs
scripts/: deploy.js
server/: .env.production  DEPLOYMENT.md  deploy.sh  nginx.conf  package-lock.json  package.json
server/src/: server.js
(+174 files in other folders)
