[package]
name = "soul-sanctuary"
version = "0.1.0"
edition = "2021"
description = "SOuL Sanctuary - Transparent Forests ReFi Token Program"
authors = ["SOuL Sanctuary Team"]

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.16"
borsh = "0.10.3"
thiserror = "1.0"
spl-token = { version = "4.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.0", features = ["no-entrypoint"] }

[lib]
crate-type = ["cdylib", "lib"]
